unpackaged/main/default/objects/Opportunity_Grant__c/Opportunity_Grant__c.object-meta.xml
<CustomObject>
    <label>Opportunity Grant</label>
    <nameField>
        <label>Opportunity Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>