unpackaged/main/default/objects/Opportunity_Grant__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>