unpackaged/main/default/objects/Opportunity_Grant__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Your household/family income is $0 to $125,000 annually</fullName>
            </value>
            <value>
                <fullName>Significant loss of income or change in work status</fullName>
            </value>
            <value>
                <fullName>High medical, Educational or Family expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>