unpackaged/main/default/objects/Opportunity_Grant__c/recordTypes/Standard_Application.recordType-meta.xml
<RecordType>
    <fullName>Standard_Application</fullName>
    <active>true</active>
    <description>Record Type for the Standard Opportunity Grant Application</description>
    <label>Standard Application</label>
</RecordType>