unpackaged/main/default/objects/Opportunity_Grant__c/listViews/New_Opportunity_Grant_Applications.listView-meta.xml
<ListView>
    <fullName>New_Opportunity_Grant_Applications</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>1. New Opportunity Grant Applications</label>
</ListView>