unpackaged/main/default/objects/Opportunity_Grant__c/listViews/X2_Pending_Documentation.listView-meta.xml
<ListView>
    <fullName>X2_Pending_Documentation</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Documents</value>
    </filters>
    <label>2. Pending Documentation</label>
</ListView>