unpackaged/main/default/objects/Opportunity_Grant__c/listViews/X3_Approved_Opportunity_Grants.listView-meta.xml
<ListView>
    <fullName>X3_Approved_Opportunity_Grants</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>3. Approved Opportunity  Grants</label>
</ListView>