unpackaged/main/default/objects/Opportunity_Grant__c/listViews/X4_Denied_Opportunity_Grants.listView-meta.xml
<ListView>
    <fullName>X4_Denied_Opportunity_Grants</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>4. Denied Opportunity  Grants</label>
</ListView>